# AudioTools

./: .gitignore  CMakeLists.txt  CodeEditor.h  MainMenu.xib  README.md
AudioTools/: ButtonPyWrapper.cpp  ButtonPyWrapper.h  CodeEditor.cpp  CodeEditor.h  DropMenuBox.cpp  DropMenuBox.h  Info.plist  PanelPyWrapper.cpp  PanelPyWrapper.h  Pyo.cpp  Pyo.h  PyoAudio.cpp  PyoAudio.h  PyoComponent.cpp  PyoComponent.h  PythonWrapper.cpp  PythonWrapper.h  PythonWrapperUtils.cpp  PythonWrapperUtils.h  TextEditor.cpp  TextEditor.h  TextEditorLogic.cpp  TextEditorLogic.h  WindowPyWrapper.cpp  WindowPyWrapper.h  atArchive.cpp  atColorButton.cpp  atColorButton.h  atCommon.h  atConsole.cpp  atConsole.h  atConsoleStream.cpp  atConsoleStream.h  atEditor.cpp  atEditor.h  atEditorAccount.cpp  atEditorAccount.h  atEditorBottomSection.cpp  atEditorBottomSection.h  atEditorGridWindow.cpp  (+112 more)
AudioTools.xcodeproj/: project.pbxproj
AudioTools.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AudioTools/Assets.xcassets/AppIcon.appiconset/: Contents.json
include/: DropMenuBox.h  PyoAudio.h  atArchive.h  atColorButton.h  atConsole.h  atConsoleStream.h  atHelpBar.h  atMainWindowProjectHandler.h  atMainWindowViewHandler.h  atMainWindowWidgetHandler.h  atMenuAttribute.h  atMenuBoolAttribute.hpp  atMenuColorAttribute.hpp  atMenuIntegerAttribute.hpp  atMenuPathAttribute.hpp  atMenuPointAttribute.hpp  atMenuSizeAttribute.hpp  atMidi.h  atMidiFeedback.h  atOpenDialog.hpp  atPreferenceDialog.h  atProjectFile.h  atProjectManager.h  atSaveDialog.hpp  atSaveWorkDialog.h  atSkin.hpp  atSplashDialog.hpp  atUniqueNameComponent.h  atVolumeMeter.hpp  atWindowEventsComponent.hpp
include/atk/: AudioCore.hpp  MidiCore.hpp
include/editor/: GridSnapProxy.hpp  TextEditor.hpp  TextEditorLogic.hpp  atEditor.hpp  atEditorBottomSection.hpp  atEditorGridWindow.hpp  atEditorInspectorMenu.hpp  atEditorLeftSideMenu.hpp  atEditorLoader.hpp  atEditorMainWindow.hpp  atEditorOnlineStoreMenu.hpp  atEditorProjectInfo.hpp  atEditorProjectSpace.hpp  atEditorPyDoc.hpp  atEditorPyDocElement.hpp  atEditorPyDocSeparator.hpp  atEditorRightSideMenu.hpp  atEditorStatusBar.hpp  atEditorWidgetMenu.hpp  atEditorWidgetMenuObj.hpp  atEditorWorkspace.hpp  atEditorWorkspaceObj.hpp
include/menu/attribute/: atMenuAttribute.hpp  atMenuPointAttribute.hpp  atMenuSizeAttribute.hpp
include/project/: atProjectManager.hpp
include/python/: ButtonPyWrapper.hpp  PanelPyWrapper.hpp  PyoComponent.hpp  PythonWrapper.hpp  SpritePyWrapper.hpp  WindowPyWrapper.hpp  m_pyo.h
resources/AudioTools/: .atproj
resources/AudioTools/scripts/: default.py
resources/AudioTools/widgets/: SliderVertical2.xml
resources/AudioTools/workspace/: drum_pad.xml
source/: DropMenuBox.cpp  PyoAudio.cpp  atArchive.cpp  atColorButton.cpp  atConsole.cpp  atHelpBar.cpp  atMainWindowProjectHandler.cpp  atMainWindowViewHandler.cpp  atMainWindowWidgetHandler.cpp  atMenuAttribute.cpp  atMenuBoolAttribute.cpp  atMenuColorAttribute.cpp  atMenuIntegerAttribute.cpp  atMenuPathAttribute.cpp  atMenuPointAttribute.cpp  atMenuSizeAttribute.cpp  atMidi.cpp  atMidiFeedback.cpp  atOpenDialog.cpp  atPreferenceDialog.cpp  atProjectFile.cpp  atProjectManager.cpp  atSaveWorkDialog.cpp  atSkin.cpp  atSplashDialog.cpp  atVolumeMeter.cpp  atWindowEventsComponent.cpp  axEditorInspectorMenu.cpp  main.cpp  mdiSaveDialog.cpp
source/atk/: AudioCore.cpp
source/dialog/: atSplashDialog.cpp
source/editor/: GridSnapProxy.cpp  TextEditor.cpp  TextEditorLogic.cpp  atEditor.cpp  atEditorAccount.cpp  atEditorBottomSection.cpp  atEditorGridWindow.cpp  atEditorLeftSideMenu.cpp  atEditorLoader.cpp  atEditorMainWindow.cpp  atEditorOnlineStoreMenu.cpp  atEditorProjectInfo.cpp  atEditorProjectSpace.cpp  atEditorPyDoc.cpp  atEditorPyDocElement.cpp  atEditorPyDocSeparator.cpp  atEditorRightSideMenu.cpp  atEditorStatusBar.cpp  atEditorWidgetMenu.cpp  atEditorWidgetMenuObj.cpp  atEditorWorkspace.cpp  atEditorWorkspaceObj.cpp  axEditorInspectorMenu.cpp
source/menu/attribute/: atMenuAttribute.cpp  atMenuBoolAttribute.cpp  atMenuPathAttribute.cpp  atMenuRangeAttribute.cpp  atMenuSizeAttribute.cpp
source/project/: atProjectFile.cpp
source/python/: PanelPyWrapper.cpp  Pyo.cpp  PyoComponent.cpp  PythonWrapper.cpp  PythonWrapperUtils.cpp  SpritePyWrapper.cpp  WindowPyWrapper.cpp  m_pyo.cpp
